--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://example.com"
 languageCode = "en-us"
-title = "Some Title"
-theme = "minimal-bootstrap-hugo-theme-master"
+title = "Technical Writing Repo"
+theme = "minimal-master"
 
 [taxonomies]
   tag = "tags"
@@ -23,31 +23,35 @@ theme = "minimal-bootstrap-hugo-theme-master"
   customDateFormat = "Jan 2, 2006"
   customCodeStyle = true
   customBlockquoteStyle = true
-  showPostSummary = false
+  showPostSummary = true
   googleAnalytics = "UA-123456789-1"
   cookieConsent = true
-  includeBootstrapJs = false
+  includeBootstrapJs = true
   faviconSafariPinnedTabColor = "#5bbad5"
   faviconMsApplicationTileColor = "#da532c"
   faviconThemeColor = "#ffffff"
 
 [menu]
   [[menu.nav]]
-  name = "Posts"
-  url = "/"
+  name = "News"
+  url = "/news/"
   weight = 1
   [[menu.nav]]
-  name = "Tags"
-  url = "/tags/"
+  name = "Glossary"
+  url = "/glossary/"
   weight = 2
   [[menu.nav]]
-  name = "About"
-  url = "/about/"
+  name = "Resources"
+  url = "/content/res111.md/"
   weight = 3
-  [[menu.nav]]
-  name = "RSS"
-  url = "/index.xml"
+   [[menu.nav]]
+  name = "Google TW"
+  url = "/googletw/"
   weight = 4
+  [[menu.nav]]
+  name = "Contacts"
+  url = "/contacts/"
+  weight = 5
 
 [markup]
   defaultMarkdownHandler = "goldmark"
